chore: add lint and typecheck tools

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
@@ -17,5 +19,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "zod": "^3.25.76"
+  },
+  "devDependencies": {
+    "eslint": "^9.13.0",
+    "typescript": "^5.8.3"
   }
 }
